ADD static rating to list

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -37,3 +37,9 @@ ul.mp3_importers
 
 .doesnt_have_year
 	background: #ccc
+
+.active-rating .glyphicon:hover
+	cursor: pointer
+
+.yellow
+	color: #005eff
