--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -1,3 +1,13 @@
-%div{ ng: {app: 'itunesTracks'}}
-  .view-container
-    .view-frame.animate-view{ ng: {view: ''} }
+.container
+  .row
+    .col-md-12
+      .panel.panel-default
+        .panel-body
+          %h1
+            Rake tasks
+          .tasks
+            rake itunes_tracks:update_library
+            %br
+            rake itunes_tracks:update_all_ratings
+            %br
+            rake references:update
